Build: ignore deps major versions with breaking changes

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,14 @@ updates:
         versions: ["5.x.x"]
       - dependency-name: "@redhat-cloud-services/frontend-components"
         versions: ["5.x.x"]
+      - dependency-name: "react"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "react-dom"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "htmlparser2"
+        update-types: ["version-update:semver-major"]
+      - dependency-name: "jest"
+        update-types: ["version-update:semver-major"]
     commit-message:
       prefix: "Build: "
     groups:
