Test: add a gate for RBAC tests
This adds a new environment variable that functions as a gate for
running RBAC tests. With this they are going to be opt-in now, which
will be handy for running tests locally as it will cut down the time for
setup and authentication.
This will also help newcomers and people that want to try playwright
through our repo, as they won't need all of the other user's
credentials.
The RBAC tests and the full setup will still be run in CI.

--- a/.github/workflows/playwright-actions.yml
+++ b/.github/workflows/playwright-actions.yml
@@ -68,6 +68,7 @@ jobs:
             echo "RHEL_OPERATOR_PASSWORD=$RHEL_OPERATOR_PASSWORD"
             echo "BASE_URL=https://stage.foo.redhat.com:1337"
             echo "CI=true"
+            echo "RBAC=true"
           } >> .env
 
           echo ".env file created successfully."
