--- a/playwright_example.env
+++ b/playwright_example.env
@@ -7,8 +7,8 @@
 ADMIN_USERNAME="" # Required
 ADMIN_PASSWORD="" # Required
 
-ORG_ID_1="1234"                            # org id for registration tests
-ACTIVATION_KEY_1="<activation_key>"        # activation key used for testing
+ORG_ID_1="1234"                     # org id for registration tests
+ACTIVATION_KEY_1="<activation_key>" # activation key used for testing
 
 # read-only user (same ORG as the admin)
 
@@ -28,6 +28,7 @@ PROXY=""                                     # Set this if running directly agai
 CI=""          # This is set to true for CI jobs (used by PW), if checking for CI do  !!process.env.CI
 INTEGRATION="" # When this is true, playwright test will run integration tests.
 PROD=""        # When this and $INTEGRATION is set to true, integration test are gonna run those meant for PROD.
+RBAC=""        # When this is true, playwright test will run RBAC test along the other UI tests.
 
 # -------------- OTHER --------------
 TOKEN=""         # This is handled programmatically.
