--- a/.github/workflows/nightly-stage-test-action.yml
+++ b/.github/workflows/nightly-stage-test-action.yml
@@ -53,6 +53,7 @@ jobs:
       - name: Create .env file
         run: |
           echo "CI=true" >> .env
+          echo "RBAC=true" >> .env
           echo "INTEGRATION=true" >> .env
           echo "BASE_URL=$BASE_URL" >> .env
           echo "PROXY=$PROXY" >> .env
