--- a/playwright_example.env
+++ b/playwright_example.env
@@ -20,6 +20,16 @@ READONLY_PASSWORD="" # Required for RBAC tests
 RHEL_OPERATOR_USERNAME="" # Required for RBAC tests
 RHEL_OPERATOR_PASSWORD="" # Required for RBAC tests
 
+# Users for layered repo access tests
+
+LAYERED_REPO_ACCESS_USERNAME="" # Required
+LAYERED_REPO_ACCESS_PASSWORD="" # Required
+RHEL_ONLY_ACCESS_USERNAME="" # Required
+RHEL_ONLY_ACCESS_PASSWORD="" # Required
+
+LAYERED_REPO_ACCESS_ORG_ID="5678"   # org id for layered repo user
+LAYERED_REPO_ACCESS_ACTIVATION_KEY="<activation_key>" # activation key for layered repo user
+
 # ----------- DESTINATION -----------
 BASE_URL="https://stage.foo.redhat.com:1337" # Required
 PROXY=""                                     # Set this if running directly against stage (not using "yarn local")
