--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@patternfly/react-core": "^6.3.0-prerelease.2",
     "@patternfly/react-icons": "^6.3.0-prerelease.1",
+    "@patternfly/react-styles": "^6.3.0",
     "@patternfly/react-table": "^6.3.0-prerelease.2",
     "@redhat-cloud-services/frontend-components": "^6.1.0",
     "@redhat-cloud-services/frontend-components-config": "^6.6.4",
