fix: run auth setup for layered repo / rhel-only users only during integration tests

--- a/playwright_example.env
+++ b/playwright_example.env
@@ -22,10 +22,10 @@ RHEL_OPERATOR_PASSWORD="" # Required for RBAC tests
 
 # Users for layered repo access tests
 
-LAYERED_REPO_ACCESS_USERNAME="" # Required
-LAYERED_REPO_ACCESS_PASSWORD="" # Required
-RHEL_ONLY_ACCESS_USERNAME="" # Required
-RHEL_ONLY_ACCESS_PASSWORD="" # Required
+LAYERED_REPO_ACCESS_USERNAME="" # Required for integration tests
+LAYERED_REPO_ACCESS_PASSWORD="" # Required for integration tests
+RHEL_ONLY_ACCESS_USERNAME="" # Required for integration tests
+RHEL_ONLY_ACCESS_PASSWORD="" # Required for integration tests
 
 LAYERED_REPO_ACCESS_ORG_ID="5678"   # org id for layered repo user
 LAYERED_REPO_ACCESS_ACTIVATION_KEY="<activation_key>" # activation key for layered repo user
