Support no-subs user
A user without a RHEL subscription

--- a/.github/workflows/nightly-stage-test-action.yml
+++ b/.github/workflows/nightly-stage-test-action.yml
@@ -67,6 +67,8 @@ jobs:
           echo "LAYERED_REPO_ACCESS_PASSWORD=$LAYERED_REPO_ACCESS_PASSWORD" >> .env
           echo "RHEL_ONLY_ACCESS_USERNAME=$RHEL_ONLY_ACCESS_USERNAME" >> .env
           echo "RHEL_ONLY_ACCESS_PASSWORD=$RHEL_ONLY_ACCESS_PASSWORD" >> .env
+          echo "NO_SUBS_USER_USERNAME=$NO_SUBS_USER_USERNAME" >> .env
+          echo "NO_SUBS_USER_PASSWORD=$NO_SUBS_USER_PASSWORD" >> .env
           echo "ORG_ID_1=$STAGE_ORG_ID" >> .env
           echo "ACTIVATION_KEY_1=$STAGE_ACTIVATION_KEY" >> .env
           echo "LAYERED_REPO_ACCESS_ORG_ID=$LAYERED_REPO_ACCESS_ORG_ID" >> .env
