--- a/playwright_example.env
+++ b/playwright_example.env
@@ -30,6 +30,11 @@ RHEL_ONLY_ACCESS_PASSWORD="" # Required for integration tests
 LAYERED_REPO_ACCESS_ORG_ID="5678"   # org id for layered repo user
 LAYERED_REPO_ACCESS_ACTIVATION_KEY="<activation_key>" # activation key for layered repo user
 
+# No RHEL subscription user (in a different org)
+
+NO_SUBS_USER_USERNAME=""
+NO_SUBS_USER_PASSWORD=""
+
 # ----------- DESTINATION -----------
 BASE_URL="https://stage.foo.redhat.com:1337" # Required
 PROXY=""                                     # Set this if running directly against stage (not using "yarn local")
